$Id$


				MBSEBBS History.


v0.35.05	19-Oct-2002

	general:
		This may become release 0.36.00
		There is now a mberrors.h file that defines all errorcodes
		returned by all programs.

	mbcico:
		Fixed crash with incoming YooHoo session with bad password.


	mbmsg:
		The total counters in the logfile are increased to 6 digits.



v0.35.04	29-Sep-2002 - 19-Oct-2002.

	general:
		Added mail and files security flags for nodes.

	upgrade:
		Start mbsetup, enter global configuration and exit and save.
		This will set defaults for area-/filemgr logging and security.
		The noderecords are updated with new security flags.
		The filegroups, ticgroups, tic areas and message areas are 
		updated with default security flags.

        clcomm.a:
                Added Mgrlog function, logs default to manager.log. Does also
                log to Syslog with level '+'.

	mbfido:
		Area- and FileMgr requests are now also logged in manager.log
                Auto created and removed areas are also logged in manager.log
		Auto created area now get the link security from the group.
		With message areas auto update it should now only delete
		missing echomail areas.
		File attaches to our own points were placed in the node's
		outbound directory instead of the point outbound.
		Files and echomail security flags implemented.
		Echomail rescan will also work with newsgroups.
		Removed some debug logging with files replace.
		Fixed trashing news dupes file when mbfido was called multiple
		times. Improved program locking.
		Netmail received for a zone/net without netmail board will be
		stored in the badmail area.

	mbsetup:
		Added setup for the nodes record for security flags.
                Added setup for the ticgroups default security flags.
		Added setup for the mailgroups default security flags.
		Added setup for the tic areas security flags.
		Added setup for the message areas security flags.
		Menu 14, edit files database had the wrong selection prompt.